# TC2025-Proyecto2

./: .gitignore  CMakeLists.txt  README.md
html/: index.html
lib/: server_functions.h
src/: CMakeLists.txt  Calculate_Pi.h  calculate_pi.c  calculate_pi.h  client.c  indexHtml.c  index_html.c  main.c  nearestPrime.c  nearest_prime.c  regresion.c  server.c  sumaTotal.c  total_sum.c
